trunk/Archive2/c4/e46463284b4bce/output
main.cpp:7:6: error: parameter declaration for literal operator 'operator "" _int' is not valid
void operator "" _int() {
     ^
main.cpp:13:8: error: no matching literal operator for call to 'operator "" _int' with argument of type 'unsigned long long' or 'const char *', and no matching literal operator template
    123_int<3, 4>;
       ^
main.cpp:13:18: error: expected expression
    123_int<3, 4>;
                 ^
3 errors generated.
